7.9.2
 - Fix CMake documentation install. (#848)
 - Bump gcc/clang/postgres minimum version requirements.
 - Another fix to the readthedocs documentation build. (#845)
 - Work around CMake 3.30 renaming one of its functions. (#851)
 - Remove obscure deprecated `stream_to` constructor that never worked. (#853)
7.9.1
 - Fix bad conversion of array of empty strings to string. (#816)
 - Move `[[likely]]` feature check back to compile time, to speed up configure.
 - Support `[[assume(...)]]`.
 - Fix `throw_null_conversion` compile error when converting enums. (#807)
 - Fix memory leak when failing to connect.
 - Improve introductory docs for connections and transactions.
 - Re-do entire documentation build.  No more Sphinx in readthedocs. (#802)
 - No more autodetection of doxygen etc.  Run it, or don't.
 - Docs build now disabled by default; use `--enable-documentation` to change.
7.9.0
 - Support standard libraries without `std::basic_string<std::byte>` etc.
 - `std::basic_string<std::byte` becomes `pqxx::bytes`. (#726)
 - `std::basic_string_view<std::byte>` becomes `bytes_view`. (#726)
 - Fix assertion failure when streaming row ending in empty string. (#774)
 - CMake users can `shared_link_libraries(... libpqxx::pqxx)`. (#784)
 - Support parameterised versions of `query()` etc. (#646)
 - Put all feature tests back in config header. (#732)
 - Automate integration of feature tests into both CMake & autoconf. (#747)
 - Streaming query result implements `std::input_iterator`. (#771)
 - Fix broken `to_buf()` on `zview`. (#728)
 - Support `PQfsize()` and `PQfmod()`. (#727)
 - Implement conversion from `string_view` to string. (#728)
 - Rename `splitconfig` to `splitconfig.py`. (#763)
 - Document need for conversions more clearly, link to docs. (#757)
 - Experimental support for converting `std::span` to SQL arrays. (#769)
7.8.1
 - Regenerate build files. Should fix ARM Mac build. (#715)
 - Reinstate `<ciso646>` that MSVC can't live with or without. (#713)
7.8.0